# directopsy-rs

./: Cargo.toml  README.md
src/: foundfile.rs  lib.rs  main.rs  table.rs
tests/: tests.rs
