[package]
name = "list-rs"
description = "Command-line tool to quickly get a list of files in a directory in a human-readable format"
version = "0.0.1"
edition = "2021"
authors = ["Illy <illystable.champs@gmail.com>"]
repository = "https://github.com/IllyStable/list-rs"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["utility", "files", "command"]
exclude = ["/tests"]


[dependencies]
clap = { version = "4.5.21", features = ["derive"] }

[[bin]]
name = "list"
